# AI-GEA

./: README.md  __init__.py  features.py  fila_treinamento.py  graph_embedding_recommender.py  graph_loader.py  licence  logger.py  main.py  plugins.py  recommender.py  setup.py  training.py  utils.py  visual.py
AI-GEA-main/: README.md  accuracy.py  correlacoes.csv  licence  pipeline.py  pyproject.toml  resultados_benchmark.csv
AI-GEA-main/ai_gea/: __init__.py  analysis.py  defaut_embeddings.py  evaluation.py  features.py  graph_loader.py  logger.py  main.py  training.py  visual.py
ai_gea/: __init__.py  analysis  analysis.py  defaut_embeddings.py  evaluation.py  features.py  fila_treinamento.py  graph_loader.py  main.py  plugins.py  recommender.py  visual.py
