[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm>=6.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "ai-gea"
version = "0.1.0"
authors = [
    {name = "William Silva", email = "Williamkauasoaresdasilva@gmail.com"},
]
description = "AI-GEA: Artificial Intelligence for Graph Embedding Analysis"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["graph", "embedding", "machine-learning", "recommendation", "ai"]
dependencies = [
    "networkx>=2.5",
    "numpy>=1.19.0",
    "scikit-learn>=0.24.0",
    "matplotlib>=3.3.0",
    "gensim>=4.0.0",
    "node2vec>=0.4.0",
    "tqdm>=4.0.0",
]

[project.urls]
Documentation = "https://github.com/Williamsoars/AI-GEA/docs"
Source = "https://github.com/Williamsoars/AI-GEA"
Tracker = "https://github.com/Williamsoars/AI-GEA/issues"

[tool.setuptools]
package-data = {"ai_gea" = ["py.typed"]}
zip-safe = false  # Required for type checkers

[tool.setuptools_scm]
write_to = "ai_gea/_version.py"

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "import-error"
]

[tool.pytest.ini_options]
python_files = "test_*.py"
addopts = "--cov=ai_gea --cov-report=term-missing"
testpaths = ["tests"]
